Adding Firebase to HTML

--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <title>Musical</title>
 </head>
 <body>
-
+    
+    <!-- Add Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+      apiKey: "AIzaSyCjexeT-tM-VflHnLImCyMEZhgw-O16OMY",
+      authDomain: "musicalspork-bfe10.firebaseapp.com",
+      databaseURL: "https://musicalspork-bfe10.firebaseio.com",
+      projectId: "musicalspork-bfe10",
+      storageBucket: "",
+      messagingSenderId: "1029385151250"
+    };
+  firebase.initializeApp(config);
+</script>
 </body>
 </html>
