--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-  
-       
-  
+
 
   <!-- Material Icons -->
 
-  <script src="jquery-3.3.1.min.js"></script>
+  <!--<script src="jquery-3.3.1.min.js"></script>-->
 
   <title>Musical</title>
 </head>
@@ -151,6 +149,9 @@
     };
     firebase.initializeApp(config);
   </script>
+
+    <!-- js files -->
+    <script src="assets/javascript/scratchMusixMatch.js"></script>
 </body>
 
 </html>
