--- a/index.html
+++ b/index.html
@@ -89,6 +89,15 @@
     <div class="col s2"></div>
   </div>
 
+  <!-- Modal Structure -->
+  <div id="demo-modal" class="modal">
+    <div class="modal-trigger">
+      <iframe id="youtubeLink" width="100%" height="315" src="" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <a href="#!" class="modal-action modal-close waves-effect waves-red btn red lighten-1">Close</a>
+  </div>
+
   <!-- js files -->
   <script src="assets/javascript/scratchMusixMatch.js"></script>
 </body>
