--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
 
   <!-- js files -->
   <script src="assets/javascript/scratchMusixMatch.js"></script>
+    <!-- Add Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
 </body>
 
 </html>
