The thingies are doing the thingies to the thingies

--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
 
   <!-- js files -->
   <script src="assets/javascript/scratchMusixMatch.js"></script>
+  <script src="assets/javascript/scratchYouTube.js"></script>
+  <!--<script src="assets/javascript/script.js"></script>-->
+
     <!-- Add Firebase -->
     <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
 </body>
