minor updates and commented out snippet references

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
   <!-- Display results to the user -->
   <div class="row">
     <div class="col s8">
-      <div style="display: none">
-        <table id="tableMusicResults" class="highlight centered responsive-table">
+      <div>
+        <table id="tableMusicResults" class="highlight centered responsive-table" style="display: none">
           <thead>
             <tr>
               <th>Song Title</th>
@@ -96,13 +96,14 @@
     <a href="#!" class="modal-action modal-close waves-effect waves-red btn red lighten-1">Close</a>
   </div>
 
+   <!-- Add Firebase -->
+   <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
+
   <!-- js files -->
   <script src="assets/javascript/scratchMusixMatch.js"></script>
   <script src="assets/javascript/scratchYouTube.js"></script>
-  <script src="assets/javascript/script.js"></script>
+  <!-- <script src="assets/javascript/script.js"></script> -->
 
-  <!-- Add Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
 </body>
 
 </html>
