update styling on recent searches

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="col s12">
           <div class="card hoverable">
             <h4>Recent Searches</h4>
-            <ul id="recentSearchesDiv" style="padding: 5px"></ul>
+            <ul id="recentSearchesDiv" class="collection" style="padding: 5px"></ul>
           </div>
         </div>
       </div>
